--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
   --hover-bg-color: #eccaca;
   --text-color: #333;
   --text-lighter-color: #666;
-  --bg-color:rgb(235, 235, 235);
+  --bg-color: rgb(235, 235, 235);
   --bg-text-color: white;
 
   --base-font-size: 16px;
@@ -30,7 +30,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.625rem 1.25rem; 
+  padding: 0.625rem 1.25rem;
   background-color: var(--text-color-light);
 }
 
@@ -58,7 +58,7 @@ nav {
   position: sticky; /*Se queda peagdo si haces scroll*/
   background-color: var(--main-bg-color);
   top: 0; /* Se pega en la parte superior */
-  z-index: 1000; 
+  z-index: 1000;
 }
 
 nav ul {
@@ -96,9 +96,9 @@ nav ul li:hover {
   background-color: var(--hover-bg-color);
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
   z-index: 1;
-  width: 100%; 
-  top: 100%; 
-  left: 0; 
+  width: 100%;
+  top: 100%;
+  left: 0;
 }
 
 /*dentro del dropdown*/
@@ -206,13 +206,13 @@ nav ul li:hover {
   flex-wrap: wrap;
   gap: 1.25rem;
   margin: 1.25rem auto;
-  padding: 0.6rem; 
+  padding: 0.6rem;
 }
 
 .promotion-item {
   background-color: var(--bg-text-color);
   border: 1px solid var(--hover-bg-color);
-  border-radius: 0.6rem; 
+  border-radius: 0.6rem;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   max-width: 18.75rem; /* Tamano max de cada tarjeta */
   text-align: center;
@@ -243,6 +243,10 @@ nav ul li:hover {
   color: var(--text-color);
 }
 
+.promotions-carousel {
+  display: none; /* Oculta el carrusel en pantallas grandes */
+}
+
 /*Seccion de bienvenida*/
 .welcome-section {
   display: flex;
@@ -266,7 +270,7 @@ nav ul li:hover {
   color: var(--text-color);
   margin-bottom: 1.875rem;
   line-height: 1.6;
-  max-width:  56.25rem; /* 900px */
+  max-width: 56.25rem; /* 900px */
 }
 
 /*Boton de descarga del catalogo*/
@@ -300,7 +304,7 @@ nav ul li:hover {
   font-weight: bold;
 }
 
-.download-btn .iconDownload{
+.download-btn .iconDownload {
   width: 6.25rem; /* Ajusta el tamaño según sea necesario */
   height: auto; /* Mantiene la proporción de la imagen */
 }
@@ -345,7 +349,6 @@ nav ul li:hover {
 }
 
 @media (max-width: 768px) {
-
   /*Cambia a una imagen del logo mas peque*/
   .logo {
     content: url("/img/Logo_peque.png");
@@ -358,7 +361,7 @@ nav ul li:hover {
   }
 
   .language-switcher {
-    margin-top: 0.625rem; 
+    margin-top: 0.625rem;
     gap: 0.9375rem;
   }
 
@@ -430,16 +433,74 @@ nav ul li:hover {
   }
 
   /*Promociones*/
-  .promotion-item {
-    margin-bottom: 1.25rem;
+
+  .promotions {
+    display: none; /* Oculta las promociones normales */
   }
 
-  .promotion-item h3 {
+  .promotions-carousel {
+    display: block; /* Muestra el carrusel */
+    overflow: hidden;
+    width: 100%;
+    position: relative;
+  }
+
+  .carousel-wrapper {
+    display: flex;
+    transition: transform 0.5s ease; /* Suavidad al deslizar */
+    gap: 1rem; /* Espacio entre las tarjetas */
+  }
+
+  .promotion-itemP{
+    background-color: var(--bg-text-color);
+    border: 1px solid var(--hover-bg-color);
+    border-radius: 0.6rem;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    max-width: 15rem; /* Tamano max de cada tarjeta */
+    text-align: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    text-decoration: none;
+  }
+  
+  .promotion-itemP img {
+    width: 100%;
+    height: 12.5rem;
+    object-fit: cover;
+    border-radius: 0.62rem 0.62rem 0 0;
+  }
+
+  .promotion-itemP h3 {
     font-size: 1.2rem;
+    margin-bottom: 0.5rem; /* Espaciado entre título y texto */
   }
 
-  .promotion-item p {
+  .promotion-itemP p {
     font-size: 0.9rem;
+    margin: 0.3rem 0;
+    text-decoration: none;
+  }
+
+  .carousel-prev,
+  .carousel-next,
+  .carousel-control.prevP,
+  .carousel-control.nextP {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    border: none;
+    padding: 0.8rem;
+    cursor: pointer;
+    z-index: 1;
+  }
+
+  .carousel-control.prevP {
+    left: 10px;
+  }
+
+  .carousel-control.nextP {
+    right: 10px;
   }
 
   /*Bienvenida*/
@@ -459,7 +520,7 @@ nav ul li:hover {
 
   /*boton descarga del catalogo*/
   .download-btn {
-    margin-top: 1.25px; 
+    margin-top: 1.25px;
   }
 
   .download-btn h3 {
@@ -549,8 +610,8 @@ nav ul li:hover {
 }
 
 .form-group {
-  margin-bottom: 0.9375rem; 
-  margin-right: 0.9375rem; 
+  margin-bottom: 0.9375rem;
+  margin-right: 0.9375rem;
   width: 100%;
 }
 
@@ -559,16 +620,16 @@ nav ul li:hover {
   margin-bottom: 0.5rem; /* 8px */
   font-weight: 600;
   color: var(--text-color-dark);
-  font-size: 1rem; 
+  font-size: 1rem;
 }
 
 .form-group input,
 .form-group textarea {
   width: 100%;
-  padding: 0.75rem; 
+  padding: 0.75rem;
   border: 1px solid var(--hover-bg-color);
   border-radius: 0.5rem;
-  font-size: 1rem; 
+  font-size: 1rem;
   box-sizing: border-box;
 }
 
@@ -585,10 +646,10 @@ nav ul li:hover {
 }
 
 .checkbox-label {
-  display: inline-flex; 
-  align-items: center; 
-  gap: 1rem; 
-  font-size: 0.95rem; 
+  display: inline-flex;
+  align-items: center;
+  gap: 1rem;
+  font-size: 0.95rem;
   color: var(--text-color-dark);
 }
 
@@ -650,7 +711,7 @@ button[type="submit"]:hover {
 
   button[type="submit"] {
     font-size: 0.9rem;
-    padding: 0.625rem 0.9375rem; 
+    padding: 0.625rem 0.9375rem;
   }
 
   #contactForm {
@@ -658,18 +719,18 @@ button[type="submit"]:hover {
   }
 
   .checkbox-label {
-    display: inline-flex; 
-    align-items: center; 
-    gap: 0.5rem; 
-    font-size: 0.85rem; 
-    flex-wrap: wrap; 
+    display: inline-flex;
+    align-items: center;
+    gap: 0.5rem;
+    font-size: 0.85rem;
+    flex-wrap: wrap;
   }
 
   .checkbox-label a {
-    overflow-wrap: break-word; 
+    overflow-wrap: break-word;
     word-break: break-word;
   }
-  
+
   input[type="checkbox"] {
     width: 0.9rem;
     height: 0.9rem;
@@ -677,7 +738,7 @@ button[type="submit"]:hover {
 }
 
 /*Promociones general*/
-.promociones{
+.promociones {
   padding: 2.5rem 1.25rem;
   max-width: 75rem;
   margin: 0 auto;
@@ -711,16 +772,16 @@ button[type="submit"]:hover {
 
 .info-basica p {
   font-size: 1.1rem;
-  margin:  0.3125rem 0; /* 5px */
+  margin: 0.3125rem 0; /* 5px */
   color: var(--text-lighter-color);
 }
 
 .info-basica .precio {
-  font-size: 1.6rem; 
+  font-size: 1.6rem;
   font-weight: bold;
   font-style: italic;
-  color: var(--text-color); 
-  text-align: right; 
+  color: var(--text-color);
+  text-align: right;
 }
 
 /* Itinerario */
@@ -771,7 +832,7 @@ button[type="submit"]:hover {
   font-size: 1.5rem;
   color: var(--main-bg-color);
   margin-bottom: 0.625rem;
-  border-bottom: 0.125rem solid var(--main-bg-color); 
+  border-bottom: 0.125rem solid var(--main-bg-color);
   padding-bottom: 0.3125rem; /* 5px */
 }
 
@@ -786,7 +847,7 @@ button[type="submit"]:hover {
   display: flex;
   justify-content: space-between;
   gap: 1.25rem; /* 20px */
-  margin-top: 2.5rem; /* 40px */ 
+  margin-top: 2.5rem; /* 40px */
 }
 
 .info-box {
@@ -810,18 +871,19 @@ button[type="submit"]:hover {
 }
 
 .info-box ul li {
-  margin-bottom: 0.625rem; 
+  margin-bottom: 0.625rem;
   text-align: justify;
 }
 
 @media (max-width: 768px) {
   .promociones .migas-de-pan {
-    font-size: 0.8rem;
+    display: none;
   }
 
   .destination-title {
     font-size: 2rem;
     text-align: center;
+    margin-top: -1.45rem;
   }
 
   .info-basica p {
@@ -829,24 +891,25 @@ button[type="submit"]:hover {
   }
 
   .info-basica .precio {
-    font-size: 1.2rem; 
+    font-size: 1.2rem;
+    margin-top: 1rem;
   }
 
   .itinerario {
-    display: flex; 
+    display: flex;
     flex-direction: column;
     gap: 1rem;
     padding: 1.5rem;
-    width: 100%; 
-    box-sizing: border-box; 
+    width: 100%;
+    box-sizing: border-box;
   }
 
   .dia {
-    width: 100%; 
-    margin-bottom: 1rem; 
+    width: 100%;
+    margin-bottom: 1rem;
     display: flex;
-    flex-direction: column; 
-    gap: 1rem; 
+    flex-direction: column;
+    gap: 1rem;
   }
 
   .dia h2 {
@@ -860,14 +923,14 @@ button[type="submit"]:hover {
 
   .info-boxes {
     flex-direction: column;
-    gap: 1rem; 
+    gap: 1rem;
     margin-top: 1rem;
     width: 100%;
     box-sizing: border-box;
   }
 
   .dia .imagen {
-    order: -1; 
-    margin-bottom: 1rem; 
+    order: -1;
+    margin-bottom: 1rem;
   }
 }
