--- a/css/style.css
+++ b/css/style.css
@@ -440,8 +440,6 @@ nav ul li:hover {
 
   .promotions-carousel {
     display: block; /* Muestra el carrusel */
-    overflow: hidden;
-    width: 100%;
     position: relative;
   }
 
@@ -452,13 +450,10 @@ nav ul li:hover {
   }
 
   .promotion-itemP{
-    background-color: var(--bg-text-color);
-    border: 1px solid var(--hover-bg-color);
-    border-radius: 0.6rem;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-    max-width: 15rem; /* Tamano max de cada tarjeta */
-    text-align: center;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    flex: 0 0 100%;
+    padding-right: 6rem;
+    padding-left: 6rem;
+    box-sizing: border-box;
     text-decoration: none;
   }
   
@@ -466,18 +461,19 @@ nav ul li:hover {
     width: 100%;
     height: 12.5rem;
     object-fit: cover;
-    border-radius: 0.62rem 0.62rem 0 0;
+    border-radius: 0.62rem ;
   }
 
   .promotion-itemP h3 {
     font-size: 1.2rem;
-    margin-bottom: 0.5rem; /* Espaciado entre título y texto */
+    margin-bottom: 0.5rem; 
+    color: var(--main-bg-color);
   }
 
   .promotion-itemP p {
     font-size: 0.9rem;
     margin: 0.3rem 0;
-    text-decoration: none;
+    color: var(--text-color);
   }
 
   .carousel-prev,
@@ -508,6 +504,12 @@ nav ul li:hover {
     flex-direction: column;
     text-align: center;
     padding: 1.25rem; /* 20px */
+
+    display: flex;
+    /* gap: 1rem;
+    width: 100%; */
+    box-sizing: border-box;
+  }
   }
   .welcome-section h2 {
     font-size: 2rem;
