--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,14 @@ nav ul li:hover {
 }
 
 /*Promociones*/
+.welcome-and-promotions {
+  padding: 2.5rem 1.25rem;
+  max-width: 75rem;
+  margin: 0 auto;
+  color: var(--text-color);
+  text-align: justify;
+}
+
 .promotions-title {
   text-align: left;
   margin: 1.875rem 5.625rem;
@@ -200,7 +208,8 @@ nav ul li:hover {
   display: block;
 }
 
-.promotions {
+.promotions,
+.contacto {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
@@ -253,8 +262,8 @@ nav ul li:hover {
   justify-content: space-between;
   align-items: center;
   background-color: var(--bg-text-color);
-  padding: 2.5rem;
-  margin: 1.25rem auto;
+  padding: 2rem;
+  margin: 2rem auto;
   border-radius: 0.62rem;
   box-shadow: 0px 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
   max-width: var(--base-max-content-width);
@@ -271,6 +280,7 @@ nav ul li:hover {
   margin-bottom: 1.875rem;
   line-height: 1.6;
   max-width: 56.25rem; /* 900px */
+  margin-right: 2rem;
 }
 
 /*Boton de descarga del catalogo*/
@@ -445,14 +455,14 @@ nav ul li:hover {
 
   .carousel-wrapper {
     display: flex;
-    transition: transform 0.5s ease; /* Suavidad al deslizar */
-    gap: 1rem; /* Espacio entre las tarjetas */
+    transition: transform 0.5s ease; 
+    gap: 1rem; 
   }
 
   .promotion-itemP{
     flex: 0 0 100%;
     padding-right: 6rem;
-    padding-left: 6rem;
+    padding-left: 4rem;
     box-sizing: border-box;
     text-decoration: none;
   }
@@ -468,11 +478,13 @@ nav ul li:hover {
     font-size: 1.2rem;
     margin-bottom: 0.5rem; 
     color: var(--main-bg-color);
+    text-align: center;
   }
 
   .promotion-itemP p {
     font-size: 0.9rem;
     margin: 0.3rem 0;
+    text-align: center;
     color: var(--text-color);
   }
 
@@ -501,16 +513,15 @@ nav ul li:hover {
 
   /*Bienvenida*/
   .welcome-section {
-    flex-direction: column;
-    text-align: center;
-    padding: 1.25rem; /* 20px */
-
     display: flex;
-    /* gap: 1rem;
-    width: 100%; */
+    flex-direction: column;
+    text-align: justify;
+    padding: 1.25rem; /* 20px */
+    display: flex;
     box-sizing: border-box;
+    
   }
-  }
+  
   .welcome-section h2 {
     font-size: 2rem;
   }
@@ -518,6 +529,7 @@ nav ul li:hover {
   .welcome-section p {
     font-size: 1rem;
     max-width: 100%;
+    margin-right: -2rem;
   }
 
   /*boton descarga del catalogo*/
@@ -593,10 +605,11 @@ nav ul li:hover {
   margin-bottom: 0.5rem;
 }
 .contact-title h2 {
-  font-size: 1.5rem; /* 24px */
+  font-size: 2rem;
   color: var(--main-bg-color);
+  margin-bottom: -1.25rem;
+  margin-top: -0.5rem;
   text-align: center;
-  margin: 1.875rem 5.625rem; /* 30px 90px */
 }
 
 /* Estilos para el formulario de contacto */
@@ -790,7 +803,7 @@ button[type="submit"]:hover {
 .itinerario {
   background-color: var(--bg-text-color);
   padding: 2rem;
-  border-radius: 0.625rem;
+  border-radius: 0.62rem;
   box-shadow: 0px 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
   max-width: var(--base-max-content-width);
   margin: 2rem auto;
